<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">十金时代</string>
    <string name="QQ_GROUP_KEY">01jJwxya6ghw0NsUSUgbYLkiyeBL1qjo</string>
    <string name="WEIXIN_APPID">wx14139eb90916ba5d</string>
    <string name="cancel">取消</string>
    <string name="define">确定</string>
    <string name="QQNUM">2775285963</string>
    <string name="love_share_group">团队: %d人</string>
    <string name="love_share_my">业绩：%d</string>
    <string name="look_details">查看详情</string>
    <string name="love_share_hint">分享(%1$d/%2$d)</string>
    <string name="banner_ad_unit_id">943</string>
    <string name="person_information">个人信息</string>
    <string name="person_site">收货地址</string>
    <string name="new_guide">新手指南</string>
    <string name="setting">设置</string>
    <string name="black_list">黑名单</string>
    <string name="user_and_safe">账号与安全</string>
    <string name="logout">退出账号</string>
    <string name="now_version">当前版本：%s ></string>
    <string name="data_and_cache">数据与缓存</string>
    <string name="logout_content">确定退出当前账号？</string>
    <string name="remove">移除</string>
    <string name="remove_dialog">确定将其移出黑名单？</string>
    <string name="phone_number">手机号码</string>
    <string name="change_password">修改密码</string>
    <string name="bind_wechat">微信账号绑定</string>
    <string name="bind_qq">QQ账号绑定</string>
    <string name="unbind">未绑定</string>
    <string name="change_now">马上修改</string>
    <string name="bind_success">绑定成功</string>
    <string name="unbind_success">解绑成功</string>
    <string name="wechat_dialog">解绑会影响微信登录十金， 确定解绑微信账号吗？</string>
    <string name="qq_dialog">解绑会影响QQ登录十金， 确定解绑QQ账号吗？</string>
    <string name="put_first_pwd">请输入原始密码</string>
    <string name="put_new_pwd">请输入新密码</string>
    <string name="put_pwd_again">请确认新密码</string>
    <string name="define_change_pwd">确认修改密码</string>
    <string name="nosame_pwd">两次密码不一致</string>
    <string name="change_success">修改成功</string>
    <string name="wifi_auto">Wi-Fi下自动播放视频</string>
    <string name="clear_cache">清理本地缓存数据</string>
    <string name="cache_dialog">所有缓存数据（包括音频、图片） 将从你的设备上移除</string>
    <string name="cache_success">清理成功</string>
    <string name="loading">玩命加载中</string>
    <string name="net_error">网络不太给力，获取数据失败了</string>
    <string name="refresh">刷新一下吧</string>
    <string name="empty">这里空空如也~</string>
    <string name="ranking_hint_1" >用户可通过阅读文章、发布文章、完成日常任务获取金币等方获取金币奖励。</string>
    <string name="ranking_hint_2" >排行榜排名每月月底0点0分将进行重置，重置后将开始新的一轮金币积分排名。</string>
    <string name="ranking_hint_3" >积分排名重置后，上周排名前30的用户可联系客服领取排名奖励：排名前三的依次获得150、100、80元现金奖励；7-15名用户各奖励500金币,16-30名奖励200金币。</string>
    <string name="ranking_hint_4" >中奖须知：\n
        1.用户通过非正规方式获得金币奖励，我们将收回金币奖励，并封号处理。\n
        2.中奖用户请添加客服微信“shijin1”提供个人信息便于工作人员核实颁发奖励。</string>
    <string name="message">消息</string>
    <string name="dynamic_message">动态消息</string>
    <string name="user_message">账户消息</string>
    <string name="system_message">系统消息</string>
    <string name="comment">评论</string>
    <string name="ad_like">点赞</string>
    <string name="user_like">关注</string>
    <string name="recommend_text">推荐</string>
    <string name="user_like_num">关注：</string>
    <string name="fans_num">粉丝：</string>
    <string name="fans">粉丝</string>
    <string name="notification">通知</string>
    <string name="change">零钱</string>
    <string name="point">金币</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="select_all">全选</string>
    <string name="finish">完成</string>
    <string name="delete_message_dialog">确定要删除选中的消息记录吗？</string>
    <string name="system_title">十金小助手</string>
    <string name="system_type">系统通知</string>
    <string name="shijinteam">十金团队</string>
    <string name="my_get">我收到的</string>
    <string name="my_push">我发出的</string>
    <string name="request">回复</string>
    <string name="comment_you"> 评论了你的文章 </string>
    <string name="request_you"> 回复了你的评论</string>
    <string name="follow_you">关注了你</string>
    <string name="like_you_ad">赞了你的资讯</string>
    <string name="message_empty">还没有消息噢，先去看看其他文章？</string>
    <string name="my_ad">我的资讯</string>
    <string name="new_ad">新建</string>
    <string name="draft">草稿箱</string>
    <string name="my_release">我的发布</string>
    <string name="data_statistics">数据统计</string>
    <string name="pls_send_idfont">上传身份证有人像一面</string>
    <string name="pls_send_idback">上传身份证有国徽一面</string>
    <string name="pls_send_id">请上传手持身份证照片</string>
    <string name="no_send">您的证件照片还未上传完成噢~</string>
    <string name="commit_sh">提交审核</string>
    <string name="careful">您的照片仅用于审核，我们将为您严格保密</string>
    <string name="certification_dialog">您的认证还未完成， 确定要退出吗？</string>
    <string name="go_on">继续认证</string>
    <string name="camera">拍一张</string>
    <string name="choice_pic">相册选择</string>
    <string name="personal_certification">个人认证</string>
    <string name="business_certification">商家认证</string>
    <string name="certification_no1">您还没有进行十金平台认证噢！</string>
    <string name="certification_no2">认证后就能发布资讯啦！</string>
    <string name="certification_doing1">工作人员马不停蹄审核中， 请耐心等待噢！</string>
    <string name="certification_doing2">请耐心等待噢！</string>
    <string name="certification_doing3">先去答题赚钱吧</string>
    <string name="certification_dont1">认证未通过！</string>
    <string name="certification_dont3">重新认证</string>
    <string name="certification_success1">恭喜您！认证成功</string>
    <string name="certification_success2">可以开启十金发布之旅啦！</string>
    <string name="certification_success3">立即发布</string>
    <string name="pls_send_business">请上传营业执照照片</string>
    <string name="no_send_phone">请输入联系人电话便于我们审核哦</string>
    <string name="contact">联系人：</string>
    <string name="tel">电话：</string>
    <string name="data_user">用户统计</string>
    <string name="data_ad">资讯数据</string>
    <string name="data_put">投放数据</string>
    <string name="data_yesterday">昨日概况</string>
    <string name="user_about">用户概况</string>
    <string name="follow_num">关注人数</string>
    <string name="today_add">今日新增</string>
    <string name="unfollow">取消关注</string>
    <string name="user_num">用户总数</string>
    <string name="near_7day">近7日</string>
    <string name="near_30day">近30日</string>
    <string name="to">到</string>
    <string name="ad_show_num">曝光量</string>
    <string name="ad_click_num">点击量</string>
    <string name="ad_share_num">转发量</string>
    <string name="ad_star_num">收藏量</string>
    <string name="ad_like_num">点赞量</string>
    <string name="ad_comment">评论量</string>
    <string name="near_ad">最近资讯</string>
    <string name="near_put">近期投放</string>
    <string name="sort">排序</string>
    <string name="ans_num">已答人数</string>
    <string name="true_num">答对人数</string>
    <string name="total_change">投入总零钱</string>
    <string name="last_change">剩余零钱</string>
    <string name="total_point">投入总金币</string>
    <string name="last_point">剩余金币</string>
    <string name="change_detail">零钱投入消耗情况：</string>
    <string name="up_to_down">由高到低</string>
    <string name="down_to_up">由低到高</string>
    <string name="total_draft">共有%s条记录</string>
    <string name="total_put">共有%s条发布记录</string>
    <string name="under_review">审核中</string>
    <string name="success_review">审核通过</string>
    <string name="fail_review">审核不通过</string>
    <string name="renew">续费</string>
    <string name="topay">待支付</string>
    <string name="down_off">下架</string>
    <string name="no_pass">您的内容审核不通过，原因如下：</string>
    <string name="change_now1">立即修改</string>
    <string name="change_put">修改发布</string>
    <string name="last_reward">剩余奖励</string>
    <string name="red_bag_num">红包个数</string>
    <string name="edit_num">填写个数</string>
    <string name="num">个</string>
    <string name="total_money">总金额</string>
    <string name="edit_money">输入金额</string>
    <string name="yuan">元</string>
    <string name="when_reward">续费什么时候生效？</string>
    <string name="ask_when_reward">红包领完后立即生效</string>
    <string name="why_reward">续费有什么好处？</string>
    <string name="good_for_reward">1.积攒人气（积累留言、点赞等互动）2.影响更多用户（避免重复领取问题）3.更简单（不需要重复编辑内容）</string>
    <string name="pay">支付</string>
    <string name="shijin_balance">十金余额</string>
    <string name="balance">剩余%s元</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="wechat_friend">朋友圈</string>
    <string name="qqzone">QQ空间</string>
    <string name="weibo">新浪微博</string>
    <string name="copy_link">复制链接</string>
    <string name="morethan1">≥1元可用</string>
    <string name="limit">每日上限%s元</string>
    <string name="commit_pay">确认支付</string>
    <string name="reward_success">续费成功</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_success_wait">支付成功，资讯待审核</string>
    <string name="tv_red_bag_num">红包个数：%s个</string>
    <string name="reward_money">续费金额：%s元</string>
    <string name="return_list">返回列表</string>
    <string name="new_graphic">发布图文资讯</string>
    <string name="good_for_graphic1">据说丰富的图片和最为详尽的描述</string>
    <string name="good_for_graphic2">可以让你的资讯更加打动人哟</string>
    <string name="new_video">发布视频资讯</string>
    <string name="good_for_video1">真实的视频，极具渲染力的讲解</string>
    <string name="good_for_video2">谁能拒绝你呢</string>
    <string name="empty_comment">暂无评论，赶快来抢沙发~</string>
    <string name="save_draft">存为草稿</string>
    <string name="no_save">不保存</string>
    <string name="shui" formatted="false">您当前设置的红包金额为%1$s元，扣除手续费%2$s,实际投放金额为%3$s元。</string>
    <string name="take_person">收货人: %s</string>
    <string name="take_site">收货地址: %s</string>
    <string name="small_pic">小图</string>
    <string name="next">下一步</string>
    <string name="big_pic">大图</string>
    <string name="three_pic">三图</string>
    <string name="add_title_img">点击添加封面图</string>
    <string name="plz_input_title">请输入标题</string>
    <string name="input_content">点击编辑正文内容</string>
    <string name="input_video">点击上传视频</string>
    <string name="prompt_1">注：</string>
    <string name="prompt_2">1.您的视频资讯的第一帧将成为默认的封面图</string>
    <string name="prompt_3">2.视频资讯发布不能超过10M</string>
    <string name="prompt_4">3.视频时长不能超过3分钟</string>
    <string name="video_to_long">视频过大</string>
    <string name="edit_text">编辑文字</string>
    <string name="filter">精准筛选</string>
    <string name="pass">跳过</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="age">年龄</string>
    <string name="after70">70后</string>
    <string name="after80">80后</string>
    <string name="after90">90后</string>
    <string name="after00">00后</string>
    <string name="job">职业</string>
    <string name="doctor">医生</string>
    <string name="mom">宝妈</string>
    <string name="white_work">白领</string>
    <string name="IT">IT</string>
    <string name="free_work">自由职业者</string>
    <string name="teacher">教师</string>
    <string name="other">其他</string>
    <string name="locate">位置/范围</string>
    <string name="country">全国</string>
    <string name="location_here">定位到当前位置</string>
    <string name="put_range">发布范围</string>
    <string name="northwest">西北</string>
    <string name="southwest">西南</string>
    <string name="northeast">东北</string>
    <string name="southeast">东南</string>
    <string name="center_china">华中</string>
    <string name="south_china">华南</string>
    <string name="north_china">华北</string>
    <string name="all_city">全市</string>
    <string name="all_area">全区</string>
    <string name="kilo_1">%s公里范围</string>
    <string name="setting_redbag">设置红包</string>
    <string name="plz_put_question">请输入您的问题，并在正确选项后打勾</string>
    <string name="more_than_15">最多不超过15个字</string>
    <string name="put_url">URI（非必填）：淘宝或官网等链接都可以噢</string>
    <string name="preview">预览</string>
    <string name="publish">发布</string>
    <string name="more_than_01">单个红包金额不可低于0.1元</string>
    <string name="more_than_1yuan">红包总金额不可低于1元</string>
    <string name="plz_setnum">请设置红包个数</string>
    <string name="black">拉黑</string>
</resources>