<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <LinearLayout
        android:layout_width="@dimen/dp_130"
        android:layout_height="@dimen/dp_253"
        android:orientation="vertical"
        android:background="@mipmap/icon_block_3"
        android:paddingTop="@dimen/dp_8">
        <TextView
            android:id="@+id/northwest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text_6"
            android:text="@string/northwest"/>
        <TextView
            android:id="@+id/southwest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text_6"
            android:text="@string/southwest"/>
        <TextView
            android:id="@+id/northeast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text_6"
            android:text="@string/northeast"/>
        <TextView
            android:id="@+id/southeast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text_6"
            android:text="@string/southeast"/>
        <TextView
            android:id="@+id/center_china"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text_6"
            android:text="@string/center_china"/>
        <TextView
            android:id="@+id/north_china"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text_6"
            android:text="@string/north_china"/>
        <TextView
            android:id="@+id/south_china"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text_6"
            android:text="@string/south_china"/>
    </LinearLayout>
</LinearLayout>
