<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <include layout="@layout/common_title"/>
    <ImageView
        android:id="@+id/img_graphic"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:layout_marginTop="@dimen/dp_60"
        android:src="@mipmap/icon_graphic"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/text_33"
        android:textSize="@dimen/sp_16"
        android:text="@string/new_graphic"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_for_graphic1"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/text_6"
        android:layout_marginTop="@dimen/dp_10"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_for_graphic2"
        android:textColor="@color/text_6"
        android:textSize="@dimen/sp_14"
        android:layout_marginTop="@dimen/dp_3"/>
    <ImageView
        android:id="@+id/img_video"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_90"
        android:layout_marginTop="@dimen/dp_60"
        android:src="@mipmap/icon_video2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/text_33"
        android:textSize="@dimen/sp_16"
        android:text="@string/new_video"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_for_video1"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/text_6"
        android:layout_marginTop="@dimen/dp_10"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_for_video2"
        android:textColor="@color/text_6"
        android:textSize="@dimen/sp_14"
        android:layout_marginTop="@dimen/dp_3"/>
</LinearLayout>
