<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color">
    <include layout="@layout/common_title"/>
    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:background="@color/mine_function_divider"/>
    <TextView
        android:id="@+id/tv_unput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:background="@color/colorPrimary"
        android:text="@string/more_than_01"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_13"
        android:visibility="gone"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_20"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal"
            android:background="@drawable/bg_data_ad"
            android:layout_marginTop="@dimen/dp_20"
            android:padding="@dimen/dp_10"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10">
            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_33"
                android:textSize="@dimen/sp_15"
                android:text="@string/red_bag_num"/>
            <EditText
                android:id="@+id/et_red_num"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:textSize="@dimen/sp_15"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:gravity="right|center_vertical"
                android:hint="@string/edit_num"/>
            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num"
                android:textColor="@color/text_33"
                android:textSize="@dimen/sp_15"
                android:layout_marginLeft="@dimen/dp_5"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal"
            android:background="@drawable/bg_data_ad"
            android:layout_marginTop="@dimen/dp_15"
            android:padding="@dimen/dp_10"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10">
            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_33"
                android:textSize="@dimen/sp_15"
                android:text="@string/total_money"/>
            <EditText
                android:id="@+id/ed_money"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textSize="@dimen/sp_15"
                android:textCursorDrawable="@null"
                android:inputType="numberDecimal"
                android:gravity="right|center_vertical"
                android:hint="@string/edit_money"/>
            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuan"
                android:textColor="@color/text_33"
                android:textSize="@dimen/sp_15"
                android:layout_marginLeft="@dimen/dp_5"/>
        </LinearLayout>
        <TextView
            android:id="@+id/shui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text_999999"
            android:text="@string/shui"
            />
    </LinearLayout>
    <Button
        android:id="@+id/bt_renew"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_43"
        android:layout_marginRight="@dimen/dp_43"
        android:textSize="@dimen/sp_16"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@drawable/bt_red"
        android:text="@string/renew"
        android:textColor="@color/white"
        android:paddingBottom="@dimen/dp_3"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when_reward"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/text_6"
        android:textSize="@dimen/sp_13"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/text_999999"
        android:text="@string/ask_when_reward"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_8"/>
 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/why_reward"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_15"
        android:textColor="@color/text_6"
        android:textSize="@dimen/sp_13"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/text_999999"
        android:layout_marginRight="@dimen/dp_20"
        android:text="@string/good_for_reward"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_8"/>
</LinearLayout>
