<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/ad_show_num"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/text_33"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/mine_function_divider"/>
    <TextView
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/ad_click_num"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/text_33"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/mine_function_divider"/>
    <TextView
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/ad_share_num"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/text_33"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/mine_function_divider"/>
    <TextView
        android:id="@+id/tv6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/ad_star_num"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/text_33"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/mine_function_divider"/>
    <TextView
        android:id="@+id/tv7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/ad_like_num"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/text_33"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/mine_function_divider"/>
    <TextView
        android:id="@+id/tv8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/ad_comment"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/text_33"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/mine_function_divider"/>
    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:text="@string/last_reward"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/text_33"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:background="@color/mine_function_divider"/>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_16"
        android:text="@string/cancel"
        android:background="@color/white"
        android:gravity="center"/>
</LinearLayout>
