<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/wechat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/weichat"
            android:text="@string/wechat"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/text_33"
            android:gravity="center"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/wechat_friend"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_friend"
            android:text="@string/wechat_friend"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/text_33"
            android:gravity="center"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/qq"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_qq"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/text_33"
            android:text="QQ"
            android:gravity="center"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/qqzone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/qqzone"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/text_33"
            android:text="@string/qqzone"
            android:gravity="center"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/weibo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/xinlan"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/text_33"
            android:text="@string/weibo"
            android:gravity="center"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/copy_link"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_copythelink"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/text_33"
            android:text="@string/copy_link"
            android:gravity="center"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/black"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/icon_unblack"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/text_33"
            android:text="@string/black"
            android:visibility="invisible"
            android:gravity="center"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/mine_function_divider"/>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:textColor="@color/text_33"
        android:textSize="@dimen/sp_15"
        android:text="@string/cancel"
        android:background="@color/white"
        android:gravity="center"/>
</LinearLayout>
