<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_63"
        android:text="@string/camera"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/text_33"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/mine_function_divider"/>
    <TextView
        android:id="@+id/choice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_63"
        android:text="@string/choice_pic"
        android:gravity="center"
        android:background="@color/white"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/text_33"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:background="@color/mine_function_divider"/>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_63"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_16"
        android:text="@string/cancel"
        android:background="@color/white"
        android:gravity="center"/>
</LinearLayout>
